2001-09-01 Andras Varga

	* CONST_CAST() replaced by const_cast<>()

2001-07-11 Andras Varga

	* omnetapp.cc omnetapp.h: Eric Wu's Tru64/MPI port.
        Added new ini file option: [General]/parallel-system=. Its value
        can be "PVM" or "MPI", defaults to "MPI".

2001-02-27  Andras Varga

	* ------ omnetpp-2.1 released ------

	* Borland C++ support removed: I deleted the project files
	(*.ide). I added equivalent Makefile.bc files (generated from the
	BC IDE), but they are completely unsupported at the moment. If
	there's interest, it's possible that later I'll add makefiles for
	the free command-line bc5.5 compiler.

	* ------ omnetpp-2.0p1 released ------

	* patch to prevent Unix linkers (falsely) report Speedometer as
	missing symbol


2001-02-06  Andras Varga

	* ------ omnetpp-2.0 released ------
	
	* added dllexport to Speedometer

2001-01-16  Andras Varga

	* added Speedometer class

2000-06-19  Andras Varga

	* bugfix: TOmnetApp::getOutVectorConfig() crashed when it was
	called with vecname being NULL (on Solaris; other systems seem to
	tolerate NULL being passed to sprintf() as a "%s" argument)
	[reported by Ulrich Kaage]

2000-05-07  Andras Varga

	* ------ omnetpp-2.0b5 released ------

	* ------ omnetpp-2.0b4 released ------
	
	* Makefile.vc improvements from Balazs Kelemen

2000-04-10  Andras Varga

	* TRUE/FALSE (defines) replaced by true/false (C++ keywords)

	* in printf() statements, all "%lf","%lg","%le" was replaced by
	"%f","%g","%e"

2000-04-10  Andras Varga (6-10)

	* changes to enable linking a Windows DLL from the library

	* the memoryIsLow() utility function was placed into this library,
	and now it works through a new TOmnetApp::memoryIsLow() function.

	* the "-u <user-interface>" command-line parameter is now
	understood by envir: this can be used to select the user interface
	if both Cmnenv and Tkenv is linked in (or is dynamically loaded).

	The [General]/user-interface= ini file option was also added, with